// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/Button Block 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 16px;
  padding: 13px 32px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
  width: 100%;
}

.c0:hover {
  color: #6D6E70;
  background-color: #FFF;
}

<button
  className="c0"
>
  Block
</button>
`;

exports[`Storyshots Buttons/Button Outline 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 16px;
  padding: 13px 32px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  background-color: #6D6E70;
  color: #FFF;
}

<button
  className="c0"
>
  Outline
</button>
`;

exports[`Storyshots Buttons/Button Primary 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 16px;
  padding: 13px 32px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  color: #6D6E70;
  background-color: #FFF;
}

<button
  className="c0"
  data-testid="primary-button"
>
  Primary
</button>
`;

exports[`Storyshots Buttons/Button Primary Inverted 1`] = `
.c1 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 16px;
  padding: 13px 32px;
  background: transparent;
  color: #FFF;
  border: 1px solid #FFF;
}

.c1:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c0 {
  padding: 1rem;
  height: 100vh;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      className="c1"
    >
      Primary inverted
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/Button Small 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 14px;
  padding: 8px 26px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  background-color: #6D6E70;
  color: #FFF;
}

<button
  className="c0"
  size="small"
>
  Small
</button>
`;
